--- a/index.html
+++ b/index.html
@@ -38,24 +38,19 @@
   </div>
 
   <script>
-    // URL del archivo JSON en GitHub
-    var jsonUrl = 'https://raw.githubusercontent.com/AndresFernandezFlorez/Rifa/main/puestos.json';
-
     // Generar los 100 puestos con JavaScript
     var puestosContainer = document.getElementById('puestosContainer');
-
-    // Cargar datos desde el archivo JSON en GitHub
-    fetch(jsonUrl)
-      .then(response => response.json())
-      .then(data => {
-        for (var i = 1; i <= 100; i++) {
-          var nombreGuardado = data['nombre' + i];
-          if (nombreGuardado) {
-            document.getElementById('nombre' + i).value = nombreGuardado;
-            ocuparPuesto(i);
-          }
+    
+    // Cargar datos desde localStorage al cargar la página
+    window.onload = function () {
+      for (var i = 1; i <= 100; i++) {
+        var nombreGuardado = localStorage.getItem('nombre' + i);
+        if (nombreGuardado) {
+          document.getElementById('nombre' + i).value = nombreGuardado;
+          ocuparPuesto(i);
         }
-      });
+      }
+    };
 
     for (var i = 1; i <= 100; i++) {
       var puestoDiv = document.createElement('div');
@@ -85,7 +80,7 @@
         nombreInput.focus(); // Coloca automáticamente el foco en el campo de nombre
       } else {
         // El puesto está ocupado, guardar nombre y liberar
-        guardarDatos(puestoId, nombreInput.value);
+        localStorage.setItem('nombre' + puestoId, nombreInput.value);
         ocuparPuesto(puestoId);
       }
 
@@ -96,14 +91,14 @@
 
       // Al hacer clic en el botón de guardar
       guardarBtn.onclick = function () {
-        guardarDatos(puestoId, nombreInput.value);
+        localStorage.setItem('nombre' + puestoId, nombreInput.value);
         ocuparPuesto(puestoId);
       };
 
       // Al hacer clic en el botón de cancelar
       cancelarBtn.onclick = function () {
         nombreInput.value = '';
-        guardarDatos(puestoId, '');
+        localStorage.removeItem('nombre' + puestoId);
         ocuparPuesto(puestoId);
       };
     }
@@ -128,25 +123,6 @@
         guardarBtn.style.display = 'none'; // Ocultar el botón de guardar si está disponible
         cancelarBtn.style.display = 'none'; // Ocultar el botón de cancelar si está disponible
       }
-    }
-
-    function guardarDatos(puestoId, nombre) {
-      // Cargar datos actuales desde GitHub
-      fetch(jsonUrl)
-        .then(response => response.json())
-        .then(data => {
-          // Actualizar los datos
-          data['nombre' + puestoId] = nombre;
-
-          // Guardar los datos actualizados en GitHub
-          fetch(jsonUrl, {
-            method: 'PUT',
-            headers: {
-              'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(data),
-          });
-        });
     }
   </script>
 
