--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 
   <div class="container">
     <h1 class="text-center">Rifa - 100 Puestos</h1>
-    <div class="row" id="puestosContainer">
-      <!-- Puestos se generarán aquí con JavaScript -->
+    <div class="row">
+      <div class="col-md-12" id="puestosContainer">
+        <!-- Puestos se generarán aquí con JavaScript -->
+      </div>
     </div>
   </div>
 
